--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "discord-commander",
   "version": "0.0.1",
   "description": "Command framework for discord.js",
-  "main": "index.js",
+  "main": "build/index.js",
+  "typings": "build/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
