--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   "dependencies": {
     "@types/node": "^9.6.6",
     "discord.js": "^11.3.2",
+    "node-opus": "^0.3.0",
     "reflect-metadata": "^0.1.12"
+  },
+  "peerDependencies": {
+    "node-opus": "^0.3.0"
   }
 }
